# lajuchess

./: .dockerignore  .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/api/: auth.ts  match.ts
frontend/src/lib/components/board/: Board.svelte
frontend/src/lib/core/: ws.ts
frontend/src/lib/stores/: authStore.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/game/[id]/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/matchmaking/: +page.svelte
frontend/src/routes/signup/: +page.svelte
frontend/tests/: auth.spec.ts  gameplay.spec.ts  matchmaking.spec.ts
public/: index.html
public/_app/: version.json
public/_app/immutable/assets/: 0.DAKowaHV.css  2.vynbMva9.css  3.ZDMIt15B.css
public/_app/immutable/chunks/: B3BugNP9.js  BCqeGSU5.js  BG4Ok9l4.js  BUGF0wtt.js  CIySh02B.js  Cq2bPBrY.js  D3BSw85B.js  D9BQkitj.js  DccJbRd7.js  DwZqur2L.js
public/_app/immutable/entry/: app.CurGgbk_.js  start.DHw_yXgJ.js
public/_app/immutable/nodes/: 0.CmfpN7SQ.js  1.DHEV9Xz3.js  2.zSedmhq1.js  3.88WkdKD4.js
scripts/: gen-types.sh
src/: main.rs
src/api/: auth.rs  game.rs  match_api.rs  mod.rs  ws.rs
src/core/: matchmaking.rs  mod.rs  token.rs
src/db/: mod.rs
src/models/: game.rs  messages.rs  mod.rs  state.rs  user.rs
(+1 files in other folders)
