[package]
name = "lajuchess"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
shakmaty = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dashmap = "6.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
typeshare = "1.0"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9.0"
axum-extra = { version = "0.9", features = ["cookie"] }
dotenvy = "0.15"
once_cell = "1.19"

